syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.bomnegocio.dto";
option java_outer_classname = "BomNegocio";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service HouseService {
  rpc getHouse      (google.protobuf.Int64Value) returns (House);
  rpc createHouse   (House) returns (stream House);
  rpc changeHouse   (House) returns (House);
  rpc deleteHouse   (google.protobuf.Int64Value) returns (stream House);

  rpc findAll       (google.protobuf.Empty) returns (stream House);
  rpc findFirst     (stream House) returns (House);
  rpc createAll     (stream House) returns (stream House);
}

message House {
  google.protobuf.Int64Value id = 1;
  string address = 2;
  HouseType type = 3;
  int32 size = 4;
  int64 price = 5;
  repeated string resident_names = 6;
  bool is_rented = 7;
}

enum HouseType{
  CASA = 0;
  APARTAMENTO = 1;
  OUTRO = 2;
}